# ATP-ocaml

./: .ocamlinit  dune-project  dune-workspace  ocamlplay.opam
doc/: bib.bib  parser.typ
doc/figs/: convex-set.agx
lib/: dune
test/: dune
